Chromeos: Implement wifi_regulatory_domain using "regions" key in VPD
Implement wifi_regulatory_domain function by getting country code from
VPD

Original-Reviewed-on: https://chromium-review.googlesource.com/314385
Original-Reviewed-by: Pratikkumar V Prajapati <pratikkumar.v.prajapati@intel.com>
Original-Reviewed-by: Aaron Durbin <adurbin@chromium.org>
Original-Tested-by: Hannah Williams <hannah.williams@intel.com>

Change-Id: Ia6a24df110a3860d404d345571007ae8965e9564
Signed-off-by: fdurairx <felixx.durairaj@intel.com>
Signed-off-by: Hannah Williams <hannah.williams@intel.com>
Reviewed-on: https://review.coreboot.org/12743
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/src/vendorcode/google/chromeos/Kconfig
+++ b/src/vendorcode/google/chromeos/Kconfig
@@ -160,6 +160,12 @@ config WIPEOUT_SUPPORTED
 	  signal the application the need for factory reset (a.k.a. wipe
 	  out) of the device
 
+config HAVE_REGULATORY_DOMAIN
+	bool "Add regulatory domain methods"
+	default n
+	help
+	 This option is needed to add ACPI regulatory domain methods
+
 source src/vendorcode/google/chromeos/vboot2/Kconfig
 
 endif # CHROMEOS
