--- a/src/mainboard/google/lars/spd/Makefile.inc
+++ b/src/mainboard/google/lars/spd/Makefile.inc
@@ -18,10 +18,10 @@ romstage-y += spd.c
 
 SPD_BIN = $(obj)/spd.bin
 
-SPD_SOURCES  = hynix_dimm_H9CCNNN8JTBLAR-NUD-1G-1866    # 0b0000
-SPD_SOURCES += hynix_dimm_H9CCNNNBLTBLAR-NUD-2G-1866    # 0b0001
-SPD_SOURCES += samsung_dimm_K4E8E324EB-EGCF-1G-1866     # 0b0010
-SPD_SOURCES += samsung_dimm_K4E6E304EB-EGCF-2G-1866     # 0b0011
+SPD_SOURCES  = hynix_dimm_H9CCNNN8JTBLAR-NUD-1G-1866    # 0b0000 Single Channel 2GB
+SPD_SOURCES += hynix_dimm_H9CCNNNBLTBLAR-NUD-2G-1866    # 0b0001 Dual Channel 8GB
+SPD_SOURCES += samsung_dimm_K4E8E324EB-EGCF-1G-1866     # 0b0010 Dual Channel 4GB
+SPD_SOURCES += empty                                    # 0b0011
 SPD_SOURCES += empty                                    # 0b0100
 SPD_SOURCES += empty                                    # 0b0101
 SPD_SOURCES += empty                                    # 0b0110
