--- a/src/superio/winbond/Kconfig
+++ b/src/superio/winbond/Kconfig
@@ -39,6 +39,10 @@ config SUPERIO_WINBOND_W83627UHG
 	bool
 	select SUPERIO_WINBOND_COMMON_ROMSTAGE
 
+config SUPERIO_WINBOND_W83667HG_A
+	bool
+	select SUPERIO_WINBOND_COMMON_ROMSTAGE
+
 config SUPERIO_WINBOND_W83697HF
 	bool
 	select SUPERIO_WINBOND_COMMON_ROMSTAGE
