intel/common/firmware: Add option to configure SPI for EM100
Add a Kconfig option to set the firmware descriptor to allow EM100 use.

Change-Id: If5d7cd6ad671f0328ee5be0b5e660dbc837fcac3
Signed-off-by: Martin Roth <martinroth@google.com>
Reviewed-on: https://review.coreboot.org/12637
Tested-by: build bot (Jenkins)
Reviewed-by: Aaron Durbin <adurbin@chromium.org>

--- a/src/southbridge/intel/common/firmware/Makefile.inc
+++ b/src/southbridge/intel/common/firmware/Makefile.inc
@@ -71,6 +71,12 @@ else ifneq ($(CONFIG_BUILD_WITH_FAKE_IFD),y)
 	mv $(obj)/coreboot.pre.new $(obj)/coreboot.pre
 endif
 
+ifeq ($(CONFIG_EM100),y)
+	printf "    IFDTOOL    Setting EM100 mode\n"
+	$(objutil)/ifdtool/ifdtool --em100 $(obj)/coreboot.pre
+	mv $(obj)/coreboot.pre.new $(obj)/coreboot.pre
+endif
+
 PHONY+=add_intel_firmware
 
 endif
