--- a/src/southbridge/intel/common/firmware/Kconfig
+++ b/src/southbridge/intel/common/firmware/Kconfig
@@ -34,6 +34,12 @@ config IFD_BIN_PATH
 	default "3rdparty/blobs/mainboard/$(MAINBOARDDIR)/descriptor.bin"
 	depends on HAVE_IFD_BIN && !BUILD_WITH_FAKE_IFD
 
+config EM100
+	bool "Configure IFD for EM100 usage"
+	depends on HAVE_IFD_BIN && !BUILD_WITH_FAKE_IFD
+	help
+	  Set SPI frequency to 20MHz and disable Dual Output Fast Read Support
+
 config HAVE_ME_BIN
 	bool "Add Intel ME/TXE firmware"
 	depends on HAVE_IFD_BIN
