--- a/src/console/Kconfig
+++ b/src/console/Kconfig
@@ -2,7 +2,7 @@ menu "Console"
 
 config BOOTBLOCK_CONSOLE
 	bool "Enable early (bootblock) console output."
-	depends on ARCH_ARM || ARCH_RISCV || ARCH_MIPS
+	depends on ARCH_ARM || ARCH_ARM64 || ARCH_RISCV || ARCH_MIPS
 	default n
 	help
 	  Use console during the bootblock if supported
