--- a/src/mainboard/google/oak/Kconfig
+++ b/src/mainboard/google/oak/Kconfig
@@ -24,12 +24,14 @@ config BOARD_SPECIFIC_OPTIONS
 	select SOC_MEDIATEK_MT8173
 	select BOARD_ID_AUTO
 	select BOARD_ROMSIZE_KB_4096
-	select CHROMEOS_VBNV_EC
 	select EC_GOOGLE_CHROMEEC
 	select EC_GOOGLE_CHROMEEC_SPI
-	select EC_SOFTWARE_SYNC
 	select MAINBOARD_HAS_NATIVE_VGA_INIT
 	select MAINBOARD_DO_NATIVE_VGA_INIT
+
+config CHROMEOS
+	select CHROMEOS_VBNV_EC
+	select EC_SOFTWARE_SYNC
 	select VIRTUAL_DEV_SWITCH
 
 config MAINBOARD_DIR
