intel/strago: Remove CONFIG_ from CONFIG_GOP_SUPPORT inside Kconfig
The CONFIG_ is only used for Kconfig symbols outside of Kconfig.  If
used inside Kconfig, you'd end up with CONFIG_CONFIG_GOP_SUPPORT when
it was used in the C code.

Change-Id: I572323ef08fdd937d33ded1c27a418b3ad856147
Signed-off-by: Martin Roth <martinroth@google.com>
Reviewed-on: https://review.coreboot.org/12664
Tested-by: build bot (Jenkins)
Reviewed-by: Patrick Georgi <pgeorgi@google.com>

--- a/src/mainboard/intel/strago/Kconfig
+++ b/src/mainboard/intel/strago/Kconfig
@@ -53,7 +53,7 @@ config VBOOT_RAMSTAGE_INDEX
 config VBOOT_REFCODE_INDEX
 	hex
 	default 0x3
-if !CONFIG_GOP_SUPPORT
+if !GOP_SUPPORT
 config VGA_BIOS_FILE
 	string
 	default "3rdparty/blobs/mainboard/intel/strago/vgabios_c0.bin" if C0_DISP_SUPPORT
@@ -62,5 +62,5 @@ config VGA_BIOS_ID
 	string
 	default "8086,22b1" if C0_DISP_SUPPORT
 	default "8086,22b0" if !C0_DISP_SUPPORT
-endif
+endif # GOP_SUPPORT
 endif # BOARD_INTEL_STRAGO
