AMD/bettong: Remove the useless period (trivial)
It seems that no one add period in Kconfig.

Change-Id: Ie9c585a8e6f1a73036b92b2873dc19284d82dc39
Signed-off-by: Zheng Bao <fishbaozi@gmail.com>
Reviewed-on: https://review.coreboot.org/12668
Reviewed-by: Martin Roth <martinroth@google.com>
Tested-by: build bot (Jenkins)

--- a/src/southbridge/amd/pi/hudson/Kconfig
+++ b/src/southbridge/amd/pi/hudson/Kconfig
@@ -229,7 +229,7 @@ config AZ_PIN
 endif
 
 config HUDSON_UART
-	bool "UART controller on Kern."
+	bool "UART controller on Kern"
 	default n
 	depends on SOUTHBRIDGE_AMD_PI_KERN
 	select DRIVERS_UART_8250MEM
