--- a/src/mainboard/google/oak/Kconfig
+++ b/src/mainboard/google/oak/Kconfig
@@ -23,6 +23,7 @@ config BOARD_SPECIFIC_OPTIONS
 	def_bool y
 	select SOC_MEDIATEK_MT8173
 	select BOARD_ID_AUTO
+	select BOARD_ROMSIZE_KB_4096
 	select CHROMEOS_VBNV_EC
 	select EC_GOOGLE_CHROMEEC
 	select EC_GOOGLE_CHROMEEC_SPI
